# HotdogCraft

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build  run
HotdogCraft/: CMakeLists.txt
HotdogCraft/include/: AssetStore.h  Camera.h  GameRenderer.h  HotdogCraft.h  Logger.h  ScopeTimer.h  Timer.h  Utils.h  fwd.h
HotdogCraft/include/Graphics/: GlHelpers.h
HotdogCraft/include/Graphics/Screens/: GameScreen.h  Screen.h  ScreenStack.h
HotdogCraft/include/Graphics/Shaders/: Shader.h
HotdogCraft/include/Graphics/Textures/: AtlasTexture.h  Texture.h  TextureAtlas.h
HotdogCraft/include/World/: Wold.h
HotdogCraft/src/: AssetStore.cpp  GameRenderer.cpp  HotdogCraft.cpp  ScopeTimer.cpp  Timer.cpp
HotdogCraft/src/Graphics/: GlHelpers.cpp
HotdogCraft/src/Graphics/Shaders/: Shader.cpp
HotdogCraft/src/Graphics/Textures/: AtlasTexture.cpp  Texture.cpp  TextureAtlas.cpp
HotdogCraftGame/: CMakeLists.txt
HotdogCraftGame/src/: main.cpp
HotdogCraftTest/: CMakeLists.txt
HotdogCraftTest/include/: BitCeil.h
HotdogCraftTest/src/: main.cpp
assets/shaders/: main.frag  main.vert  utils.h.vert
